k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trackme-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trackme-app
  template:
    metadata:
      labels:
        app: trackme-app
    spec:
      containers:
        - name: trackme-app
          image: ${DOCKER_USERNAME}/trackme-app:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "300m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
